Refacto in progress, entities et models alignés DB mais incomplets